1.7.15.dev0
 * #399: Add a documentation troubleshooting note for MySQL/MariaDB authentication errors.
 * #697, #712: Extract borgmatic configuration from backup via "bootstrap" action—even when
   borgmatic has no configuration yet!
 * #669: Add sample systemd user service for running borgmatic as a non-root user.

1.7.14
 * #484: Add a new verbosity level (-2) to disable output entirely (for console, syslog, log file,
   or monitoring), so not even errors are shown.
 * #688: Tweak archive check probing logic to use the newest timestamp found when multiple exist.
 * #659: Add Borg 2 date-based matching flags to various actions for archive selection.
 * #703: Fix an error when loading the configuration schema on Fedora Linux.
 * #704: Fix "check" action error when repository and archive checks are configured but the archive
   check gets skipped due to the configured frequency.
 * #706: Fix "--archive latest" on "list" and "info" actions that only worked on the first of
   multiple configured repositories.

1.7.13
 * #375: Restore particular PostgreSQL schemas from a database dump via "borgmatic restore --schema"
   flag. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/#restore-particular-schemas
 * #678: Fix error from PostgreSQL when dumping a database with a "format" of "plain".
 * #678: Fix PostgreSQL hook to support "psql_command" and "pg_restore_command" options containing
   commands with arguments.
 * #678: Fix calls to psql in PostgreSQL hook to ignore "~/.psqlrc", whose settings can break
   database dumping.
 * #680: Add support for logging each log line as a JSON object via global "--log-json" flag.
 * #682: Fix "source_directories_must_exist" option to expand globs and tildes in source directories.
 * #684: Rename "master" development branch to "main" to use more inclusive language. You'll need to
   update your development checkouts accordingly.