@@ -3,6 +3,8 @@
  * #697, #712: Extract borgmatic configuration from backup via "bootstrap" action—even when
    borgmatic has no configuration yet!
  * #669: Add sample systemd user service for running borgmatic as a non-root user.
+ * #711, #713: Fix an error when "data" check time files are accessed without getting upgraded
+   first.
 
 1.7.14
  * #484: Add a new verbosity level (-2) to disable output entirely (for console, syslog, log file,
